--- a/index.html
+++ b/index.html
@@ -1,45 +1,240 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>INNOVANT BIO — Consulting Agency</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>INNOVANT BIO — Consulting Agency</title>
+  <meta name="description" content="INNOVANT BIO — Building a better working world – successful track records since 2012. Consulting, strategy, marketing, growth." />
+  <style>
+    :root{ --bg:#0b1324; --card:#101a34; --text:#e8eefc; --muted:#b8c3e6; --accent:#7fd1ae; --accent2:#6a9cfb; --border:#223159; --shadow:0 8px 24px rgba(12,18,36,.35) }
+    *{ box-sizing:border-box } html{ scroll-behavior:smooth }
+    body{ margin:0; font-family:Inter, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", sans-serif; background:
+      radial-gradient(1200px 600px at 10% -10%, rgba(122,165,255,.08), transparent 60%) no-repeat,
+      radial-gradient(900px 500px at 90% 10%, rgba(127,209,174,.08), transparent 60%) no-repeat, var(--bg);
+      color:var(--text); line-height:1.6 }
+    .container{ width:min(1100px,92%); margin:0 auto }
+    header{ position:sticky; top:0; z-index:10; backdrop-filter:blur(12px); background:rgba(11,19,36,.6); border-bottom:1px solid var(--border) }
+    .nav{ display:flex; align-items:center; justify-content:space-between; gap:16px; padding:14px 0 }
+    .nav a{ color:var(--text); text-decoration:none; margin:0 10px; font-weight:500 }
+    .nav a:hover{ color:var(--accent2) }
+    .nav .cta{ padding:10px 16px; border:1px solid var(--border); border-radius:10px }
+    .lang{ display:flex; gap:8px; align-items:center }
+    .lang button{ background:transparent; color:var(--muted); border:1px solid var(--border); padding:6px 10px; border-radius:10px; cursor:pointer }
+    .lang button.active{ color:var(--text); border-color:var(--accent2) }
+
+    .hero{ padding:72px 0 24px }
+    .tag{ display:inline-block; padding:6px 10px; border:1px solid var(--border); border-radius:999px; color:var(--muted); font-size:14px }
+    .hero h1{ font-size:clamp(28px,5vw,44px); margin:14px 0 10px; line-height:1.15 }
+    .hero p.lead{ color:var(--muted); font-size:clamp(16px,2.4vw,19px); max-width:800px }
+    .kpis{ display:grid; grid-template-columns:repeat(4,1fr); gap:16px; margin-top:22px }
+    .kpi{ background:linear-gradient(180deg, rgba(31,47,92,.5), rgba(16,26,52,.4)); border:1px solid var(--border); border-radius:14px; padding:14px; box-shadow:var(--shadow) }
+    .kpi h3{ margin:0; font-size:24px } .kpi p{ margin:6px 0 0; color:var(--muted) }
+    @media (max-width:900px){ .kpis{ grid-template-columns:repeat(2,1fr) } }
+
+    .section{ padding:48px 0 } .section h2{ font-size:26px; margin:0 0 10px } .section p.sub{ color:var(--muted); margin-top:0 }
+    .cards{ display:grid; grid-template-columns:repeat(3,1fr); gap:18px; margin-top:22px }
+    .card{ background:linear-gradient(180deg, rgba(31,47,92,.5), rgba(16,26,52,.4)); border:1px solid var(--border); border-radius:14px; padding:18px; box-shadow:var(--shadow) }
+    .card h3{ margin-top:0 } .card ul{ margin:0; padding-left:18px; color:var(--muted) }
+    @media (max-width:900px){ .cards{ grid-template-columns:1fr } }
+
+    .split{ display:grid; grid-template-columns:1.1fr .9fr; gap:24px; align-items:center }
+    @media (max-width:900px){ .split{ grid-template-columns:1fr } }
+    .badge{ display:inline-flex; align-items:center; gap:8px; padding:8px 10px; border:1px dashed var(--border); border-radius:10px; color:var(--muted) }
+    .list-check{ list-style:none; padding:0; margin:16px 0 0 } .list-check li{ margin:8px 0; padding-left:28px; position:relative }
+    .list-check li::before{ content:"✓"; position:absolute; left:0; top:0; color:var(--accent) }
+
+    .grid-2{ display:grid; grid-template-columns:1fr 1fr; gap:18px }
+    @media (max-width:900px){ .grid-2{ grid-template-columns:1fr } }
+    .partner{ display:grid; grid-template-columns: 1fr 280px; gap:18px; align-items:start }
+    @media (max-width:900px){ .partner{ grid-template-columns:1fr } }
+    img.photo{ width:100%; height:auto; border-radius:12px; border:1px solid var(--border) }
+
+    footer{ border-top:1px solid var(--border); padding:28px 0 48px; color:var(--muted) }
+    footer .grid{ display:grid; grid-template-columns:2fr 1fr 1fr; gap:18px }
+    footer a{ color:var(--muted); text-decoration:none } footer a:hover{ color:var(--text) }
+  </style>
 </head>
 <body>
-<header>
-<h1 data-lang="ru">INNOVANT BIO — консалтинг и развитие бизнеса</h1>
-<h1 data-lang="en" style="display:none">INNOVANT BIO — Consulting and Business Growth</h1>
-<div>
-<button id="ruBtn" class="active" data-setlang="ru">RU</button>
-<button id="enBtn" data-setlang="en">EN</button>
-</div>
-</header>
-<main>
-<section id="hero">
-<p data-lang="ru">Партнёр для владельцев и топ‑менеджеров: стратегия, маркетинг, продажи и внедрение.</p>
-<p data-lang="en" style="display:none">Partner for owners and executives: strategy, marketing, sales, and implementation.</p>
-<img src="managing-partner.jpg" alt="Managing Partner" style="max-width:100%; height:auto;">
-</section>
-<section id="managing-partner">
-<h2 data-lang="ru">Управляющий партнёр</h2>
-<h2 data-lang="en" style="display:none">Managing Partner</h2>
-<p data-lang="ru">Александр Ноздрачёв — более 20 лет опыта в фармацевтической индустрии.</p>
-<p data-lang="en" style="display:none">Alexander Nozdrachev — more than 20 years of experience in the pharmaceutical industry.</p>
-</section>
-</main>
-<script>
-const ruBtn = document.getElementById('ruBtn');
-const enBtn = document.getElementById('enBtn');
-function setLang(lang){
-  document.querySelectorAll('[data-lang="ru"]').forEach(el=> el.style.display = (lang==='ru') ? '' : 'none');
-  document.querySelectorAll('[data-lang="en"]').forEach(el=> el.style.display = (lang==='en') ? '' : 'none');
-  ruBtn.classList.toggle('active', lang==='ru');
-  enBtn.classList.toggle('active', lang==='en');
-  document.documentElement.lang = lang;
-}
-ruBtn.addEventListener('click', ()=> setLang('ru'));
-enBtn.addEventListener('click', ()=> setLang('en'));
-setLang('ru');
-</script>
+  <header>
+    <div class="container nav">
+      <nav class="nav-links" aria-label="Main menu">
+        <a data-lang="ru" href="#who">Кто мы</a>
+        <a data-lang="ru" href="#what">Что делаем</a>
+        <a data-lang="ru" href="#think">Наши взгляды</a>
+        <a data-lang="ru" href="#contacts">Контакты</a>
+        <a data-lang="ru" href="#managing-partner" class="cta">Управляющий партнёр</a>
+
+        <a data-lang="en" style="display:none" href="#who">Who we are</a>
+        <a data-lang="en" style="display:none" href="#what">What we do</a>
+        <a data-lang="en" style="display:none" href="#think">What we think</a>
+        <a data-lang="en" style="display:none" href="#contacts">Our contacts</a>
+        <a data-lang="en" style="display:none" href="#managing-partner" class="cta">Managing Partner</a>
+      </nav>
+      <div class="lang" role="group" aria-label="Language switcher">
+        <button id="ruBtn" class="active" data-setlang="ru">RU</button>
+        <button id="enBtn" data-setlang="en">EN</button>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero container" id="who">
+      <span class="tag" data-lang="ru">Консалтинг • Стратегия • Результат</span>
+      <span class="tag" data-lang="en" style="display:none">Consulting • Strategy • Execution</span>
+      <h1 data-lang="ru">INNOVANT BIO — помогаем компаниям расти быстрее</h1>
+      <h1 data-lang="en" style="display:none">INNOVANT BIO — accelerating growth from strategy to execution</h1>
+      <p class="lead" data-lang="ru">Партнёр для владельцев и топ‑менеджеров: стратегия, продукт и маркетинг, процессы продаж и аналитика, сопровождение внедрения.</p>
+      <p class="lead" data-lang="en" style="display:none">Partner for founders and executives: strategy, product & marketing, sales processes and analytics, hands‑on implementation.</p>
+      <p class="sub" data-lang="en">Building a better working world — successful track records since 2012.</p>
+      <div class="kpis">
+        <div class="kpi"><h3>12+</h3><p data-lang="ru">лет опыта</p><p data-lang="en" style="display:none">years experience</p></div>
+        <div class="kpi"><h3>80+</h3><p data-lang="ru">проектов</p><p data-lang="en" style="display:none">projects delivered</p></div>
+        <div class="kpi"><h3>€120M</h3><p data-lang="ru">рост выручки клиентов</p><p data-lang="en" style="display:none">revenue uplift</p></div>
+        <div class="kpi"><h3>8</h3><p data-lang="ru">стран</p><p data-lang="en" style="display:none">countries</p></div>
+      </div>
+    </section>
+
+    <section id="what" class="section container">
+      <h2 data-lang="ru">Что мы делаем</h2>
+      <h2 data-lang="en" style="display:none">What we do</h2>
+      <div class="cards">
+        <article class="card">
+          <h3 data-lang="ru">Стратегия и рост</h3>
+          <h3 data-lang="en" style="display:none">Strategy & Growth</h3>
+          <ul>
+            <li data-lang="ru">Диагностика бизнеса и roadmap 12–18 мес.</li>
+            <li data-lang="en" style="display:none">Business diagnostics & 12–18m roadmap</li>
+            <li data-lang="ru">Go‑to‑Market и выход на новые рынки</li>
+            <li data-lang="en" style="display:none">Go‑to‑Market & market expansion</li>
+            <li data-lang="ru">Юнит‑экономика, ценообразование</li>
+            <li data-lang="en" style="display:none">Unit economics, pricing</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3 data-lang="ru">Маркетинг и продажи</h3>
+          <h3 data-lang="en" style="display:none">Marketing & Sales</h3>
+          <ul>
+            <li data-lang="ru">Позиционирование и бренд‑платформа</li>
+            <li data-lang="en" style="display:none">Positioning & brand platform</li>
+            <li data-lang="ru">Воронка, CRM, автоматизация</li>
+            <li data-lang="en" style="display:none">Funnel, CRM, automation</li>
+            <li data-lang="ru">Контент‑стратегия, перформанс‑каналы</li>
+            <li data-lang="en" style="display:none">Content strategy & performance channels</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3 data-lang="ru">Операционная эффективность</h3>
+          <h3 data-lang="en" style="display:none">Operational Excellence</h3>
+          <ul>
+            <li data-lang="ru">Процессы, KPI, OKR</li>
+            <li data-lang="en" style="display:none">Processes, KPIs, OKRs</li>
+            <li data-lang="ru">Цифровая трансформация и BI</li>
+            <li data-lang="en" style="display:none">Digital transformation & BI</li>
+            <li data-lang="ru">Обучение команды и change‑менеджмент</li>
+            <li data-lang="en" style="display:none">Team enablement & change management</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section id="think" class="section container">
+      <div class="split">
+        <div>
+          <h2 data-lang="ru">Наши взгляды</h2>
+          <h2 data-lang="en" style="display:none">What we think</h2>
+          <p class="sub" data-lang="ru">Мы верим в быстрые итерации, прозрачные метрики и культуру экспериментов.</p>
+          <p class="sub" data-lang="en" style="display:none">We believe in fast iterations, transparent metrics and a culture of experiments.</p>
+          <ul class="list-check">
+            <li data-lang="ru">Спринты 2–4 недели</li>
+            <li data-lang="en" style="display:none">2–4 week sprints</li>
+            <li data-lang="ru">Общие KPI с командой клиента</li>
+            <li data-lang="en" style="display:none">Shared KPIs with your team</li>
+            <li data-lang="ru">Фокус на выручку и маржинальность</li>
+            <li data-lang="en" style="display:none">Revenue & margin focus</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3 data-lang="ru">Формат работы</h3>
+          <h3 data-lang="en" style="display:none">Engagement model</h3>
+          <p data-lang="ru">Проектно или на ретейнере. Берём ответственность за результат: еженедельные демо, бэклог, прозрачность.</p>
+          <p data-lang="en" style="display:none">Project‑based or retainer. Accountable for outcomes: weekly demos, backlog, transparency.</p>
+          <p class="notice" data-lang="ru">Стартуем с экспресс‑аудита за 2 недели, чтобы выявить быстрые точки роста.</p>
+          <p class="notice" data-lang="en" style="display:none">Start with a 2‑week express audit to surface quick wins.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="managing-partner" class="section container">
+      <h2 data-lang="ru">Управляющий партнёр</h2>
+      <h2 data-lang="en" style="display:none">Managing Partner</h2>
+      <div class="card partner">
+        <div>
+          <h3 style="margin-top:0" data-lang="ru">Александр Ноздрачёв</h3>
+          <h3 style="margin-top:0; display:none" data-lang="en">Alexander Nozdrachev</h3>
+          <p data-lang="ru"><strong>Управляющий партнёр INNOVANT BIO Consulting Agency.</strong> Более 20 лет на фармацевтическом рынке.</p>
+          <p data-lang="en" style="display:none"><strong>Managing Partner of INNOVANT BIO Consulting Agency.</strong> More than 20 years in the pharmaceutical market.</p>
+          <p data-lang="ru"><strong>Опыт:</strong> Nycomed (Takeda), Novartis, Servier — руководящие позиции в продажах, маркетинге, доступе на рынок и возмещении, стратегии и бизнес‑развитии.</p>
+          <p data-lang="en" style="display:none"><strong>Experience:</strong> Nycomed (Takeda), Novartis, Servier — senior roles across Sales, Marketing, Market Access & Reimbursement, Strategy and Business Development.</p>
+          <p data-lang="ru"><strong>Образование:</strong> РГМУ; ВШЭ (корпоративные финансы); Stockholm School of Economics (MBA); IMD (EMBA).</p>
+          <p data-lang="en" style="display:none"><strong>Education:</strong> Russian State Medical University; Higher School of Economics (Corporate Finance); Stockholm School of Economics (MBA); IMD (EMBA).</p>
+          <p data-lang="ru"><strong>Экспертиза:</strong> стратегический маркетинг, доступ на рынок, фармакоэкономика, прайсинг, портфельный менеджмент, бизнес‑девелопмент, управление партнёрствами.</p>
+          <p data-lang="en" style="display:none"><strong>Expertise:</strong> Strategic Marketing, Market Access, Pharmacoeconomics, Pricing, Portfolio Management, Business Development, Partnerships.</p>
+        </div>
+        <div>
+          <img class="photo" src="managing-partner.jpg" alt="Alexander Nozdrachev — Managing Partner" />
+        </div>
+      </div>
+    </section>
+
+    <section id="contacts" class="section container">
+      <h2 data-lang="ru">Контакты</h2>
+      <h2 data-lang="en" style="display:none">Contacts</h2>
+      <p class="sub">info@innovantbio.com</p>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container" style="display:grid; grid-template-columns:2fr 1fr 1fr; gap:18px">
+      <div>
+        <strong>INNOVANT BIO</strong>
+        <p data-lang="ru">Консалтинговое агентство для ускорения роста бизнеса.</p>
+        <p data-lang="en" style="display:none">Consulting agency to accelerate business growth.</p>
+        <small>© 2025 INNOVANT BIO</small>
+      </div>
+      <div>
+        <strong data-lang="ru">Навигация</strong>
+        <strong data-lang="en" style="display:none">Navigation</strong><br />
+        <a data-lang="ru" href="#what">Услуги</a><br />
+        <a data-lang="en" style="display:none" href="#what">Services</a><br />
+        <a data-lang="ru" href="#think">Наши взгляды</a><br />
+        <a data-lang="en" style="display:none" href="#think">Insights</a><br />
+        <a data-lang="ru" href="#managing-partner">Управляющий партнёр</a><br />
+        <a data-lang="en" style="display:none" href="#managing-partner">Managing Partner</a>
+      </div>
+      <div>
+        <strong data-lang="ru">Документы</strong>
+        <strong data-lang="en" style="display:none">Documents</strong><br />
+        <a href="#">Privacy Policy</a><br />
+        <a href="#">Terms</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // Language switcher with persistence
+    const ruBtn = document.getElementById('ruBtn');
+    const enBtn = document.getElementById('enBtn');
+    function setLang(lang){
+      document.querySelectorAll('[data-lang="ru"]').forEach(el=> el.style.display = (lang==='ru') ? '' : 'none');
+      document.querySelectorAll('[data-lang="en"]').forEach(el=> el.style.display = (lang==='en') ? '' : 'none');
+      if (ruBtn && enBtn){ ruBtn.classList.toggle('active', lang==='ru'); enBtn.classList.toggle('active', lang==='en'); }
+      document.documentElement.lang = lang;
+      try { localStorage.setItem('lang', lang); } catch(e){}
+    }
+    const saved = (typeof localStorage!=='undefined' && localStorage.getItem('lang')) || new URLSearchParams(location.search).get('lang');
+    setLang(saved==='en' ? 'en' : 'ru');
+    ruBtn?.addEventListener('click', ()=> setLang('ru'));
+    enBtn?.addEventListener('click', ()=> setLang('en'));
+  </script>
 </body>
 </html>
